# projectManger

./: .gitignore  HANDOFF.md  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_templates_recurring.sql  0003_deliverable_files.sql  0004_document_body.sql  0005_folders.sql  0006_memo.sql
src-tauri/src/: commands.rs  config.rs  db.rs  error.rs  export.rs  hostkey.rs  lib.rs  main.rs  models.rs  secrets.rs  sftp.rs  terminal.rs
src-tauri/src/aibridge/: cswap.rs  headers.rs  mod.rs  proxy.rs  token.rs
src-tauri/src/repo/: business.rs  deliverable.rs  document.rs  folder.rs  label.rs  memo.rs  mod.rs  project.rs  recurring.rs  search.rs  server.rs  snippet.rs  task.rs  template.rs  trash.rs
src-tauri/src/store/: collection.rs  entity.rs  ids.rs  io.rs  layout.rs  local.rs  mod.rs  model.rs
src-tauri/src/store/ops/: business.rs  deliverable.rs  document.rs  folder.rs  label.rs  memo.rs  mod.rs  project.rs  recurring.rs  search.rs  server.rs  snippet.rs  task.rs  template.rs  trash.rs  util.rs
src/api/: client.test.ts  client.ts
src/components/: AddMenu.test.tsx  AddMenu.tsx  BusinessEditorPopover.test.tsx  BusinessEditorPopover.tsx  CreatePopover.test.tsx  CreatePopover.tsx  GlobalSearch.test.tsx  GlobalSearch.tsx  Sidebar.test.tsx  Sidebar.tsx
src/domain/: blockContent.test.ts  blockContent.ts  businessTypes.test.ts  businessTypes.ts  dashboard.test.ts  dashboard.ts  folderOptions.test.ts  folderOptions.ts  format.test.ts  format.ts  kanban.test.ts  kanban.ts  labels.test.ts  labels.ts  memoSort.test.ts  memoSort.ts  sortOrder.test.ts  sortOrder.ts  timeline.test.ts  timeline.ts  tree.test.ts  tree.ts  types.ts
src/hooks/: useBlocks.ts  useDeliverables.ts  useDocuments.ts  useMemos.ts  useServers.ts  useTasks.ts  useTheme.test.ts  useTheme.ts
src/styles/: tokens.css
src/test/: setup.ts
src/ui/: colors.test.ts  colors.ts
src/views/: AutomationModal.tsx  BlockEditor.test.tsx  BlockEditor.tsx  Dashboard.test.tsx  Dashboard.tsx  DeliverableList.test.tsx  DeliverableList.tsx  (+39 more)
(+15 files in other folders)
